# gaia-skill-tree

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  README.md  combinations.md  pyproject.toml  registry.md  scratch_context.json
.claude/: launch.json  settings.json  settings.local.json
.githooks/: pre-commit
.github/: CODEOWNERS
.jules/: sentinel.md
docs/: DESIGN.md  GOVERNANCE.md  PLAN.md  SPEC.md  agent.md  agent_dispatch_plan.md  codex.html  how-we-do-things.html  index.html  index.md  meta-audit-criteria.md  ruflo-curation.html  skill_source_contributions.md  tree.md
graph/: gaia.gexf  gaia.json
plugin/: package.json
proposals/: github-2026-05-22.json  github-2026-05-29.json  huggingface-2026-05-21.json  huggingface-2026-05-28.json  npm-2026-05-19.json  npm-2026-05-26.json  vscode-2026-05-20.json  vscode-2026-05-27.json
registry/: combinations.md  gaia.gexf  gaia.json  named-skills.json  real-skills.html  real-skills.json  real-skills.md  registry.md  similarity.json  skill-sources.md
registry-for-review/: README.md
scripts/: _atlas_helpers.py  _tree_renderer.py  add_agent_primitives.py  add_batch_2_skills.py  add_batch_3_skills.py  add_batch_4_skills.py  add_intelligentcode_skills.py  add_mattpocock_catalog.py  add_mattpocock_skills.py  add_skills.py  add_skills_batch5.py  build_docs.py  computeRarity.py  computeSimilarity.py  dry_run_agent_skills.py  exportGexf.py  fetch_ruflo_skills.py  generateCssTokens.py  generateNamedIndex.py  generateOgCards.py  generateProfilePages.py  generateProjections.py  generateRealSkills.py  generate_ruflo_curation.py  install-git-hooks.sh  migrate_ids.py  renderGraphSvg.py  render_tui_preview.py  seed_graph.py  syncDocsGraphAssets.py  validate.py  validate_intake.py
skill-trees/: README.md
tests/: conftest.py  test_card_renderer.py  test_crawlers.py  test_docs_site.py  test_docs_skill_explorer.py  test_dx.py  test_embeddings.py  test_graph.py  test_install.py  test_intake.py  test_lifecycle.py  (+12 more)
(+675 files in other folders)
